--- a/templates/page.html
+++ b/templates/page.html
@@ -1,3 +1,4 @@
 <h1>{{page.title}}</h1>
+<div><small>Created on {{page.created_at}}</small></div>
 <div>{{page.body}}</div>
 <p><a href="/">Back to homepage</a></p>
