Add features: save JSON objects, fixture

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,5 @@
 <h1>Homepage</h1>
+<p>You can also go to the <a href="/profiles/">profile downloader page</a>.</p>
 <ol>
     {% for page in pages %}
         <li><a href="/page/{{page.id}}/">{{page.title}}</a></li>
