--- a/templates/page.html
+++ b/templates/page.html
@@ -1,4 +1,4 @@
 <h1>{{page.title}}</h1>
-<div><small>Created on {{page.created_at}}</small></div>
+<div style="margin-bottom:9px; color: #654321;"><small>Created on {{page.created_at}} by {{page.author}}</small></div>
 <div>{{page.body}}</div>
 <p><a href="/">Back to homepage</a></p>
