--- a/templates/page.html
+++ b/templates/page.html
@@ -1,4 +1,7 @@
+{% extends 'layout.html' %}
+
+{% block content %}
 <h1>{{page.title}}</h1>
 <div style="margin-bottom:9px; color: #654321;"><small>Created on {{page.created_at}} by {{page.author}}</small></div>
 <div>{{page.body}}</div>
-<p><a href="/">Back to homepage</a></p>
+{% endblock %}
