--- a/templates/layout.html
+++ b/templates/layout.html
@@ -11,16 +11,18 @@
         <strong>Menu Links:</strong> <a href="{{ url_for('index') }}">Home</a> | <a href="{{ url_for('profiles') }}">Profiles</a>
     </div>
 
-    {% if messages %}
-    <!-- If a flash() message has been sent, it will display here. -->
-    <div class="alert alert-info">
-        <ul>
-            {% for message in messages %}
-            <li>{{ message }}</li>
-            {% endfor %}
-        </ul>
-    </div>
-    {% endif %}
+    {% with messages = get_flashed_messages() %}
+        {% if messages %}
+        <!-- If a flash() message has been sent, it will display here. -->
+        <div class="alert alert-info container">
+            <ul>
+                {% for message in messages %}
+                <li>{{ message }}</li>
+                {% endfor %}
+            </ul>
+        </div>
+        {% endif %}
+    {% endwith %}
 
     <div class="container">
         {% block content %}{% endblock %}
